Récupération email + mdp avec login

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,10 +20,10 @@
     <header>
       <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
       <nav>
-        <ul>
+        <ul class="liste">
           <li>projets</li>
           <li>contact</li>
-          <li>login</li>
+          <li><a href="./log.html">Login</a></li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
