--- a/FrontEnd/log.html
+++ b/FrontEnd/log.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script src="./assets/stle.js" defer></script>
+    <script src="./assets/log.js" defer></script>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
@@ -32,14 +32,16 @@
       <section id="contact">
         <h2>Log in</h2>
 
-        <form action="#" method="post">
-          <label for="name">Nom</label>
-          <input type="text" name="name" id="name" />
+        <form class="form">
           <label for="email">Email</label>
           <input type="email" name="email" id="email" />
+          <label for="pass">Mot de passe</label>
+          <input type="password" name="password" id="password" required />
 
-          <input type="submit" value="Se connecter" />
+          <input type="submit" id="submit" value="Se connecter" />
         </form>
+        <p id="infoMdp"></p>
+        <div id="error"></div>
       </section>
     </main>
 
@@ -52,3 +54,4 @@
     </footer>
   </body>
 </html>
+email: sophie.bluel@test.tld password: S0phie
