ajout de fonction de modification mais création de nombreux bug

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,23 +7,40 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script src="./assets/style.js" defer></script>
-
+    <script src="./assets/log.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/b36407d020.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
       rel="stylesheet"
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
+    <div class="top_change_0" style="display: none">
+      <i class="fa-regular fa-pen-to-square fa-lg"></i>
+      <button class="button_modified" type="button">Mode édition</button>
+
+      <button class="button_published" type="button">
+        Publier des changements
+      </button>
+    </div>
+
     <header>
-      <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+      <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul class="liste">
           <li>projets</li>
           <li>contact</li>
-          <li><a href="./log.html">Login</a></li>
+          <li><a href="./log.html">login</a></li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
@@ -32,8 +49,18 @@
       <section id="introduction">
         <figure>
           <img src="./assets/images/sophie-bluel.png" alt="" />
+
+          <div class="top_change_1" style="display: none">
+            <i class="fa-regular fa-pen-to-square fa-lg"></i>
+            <button class="button_modifier" type="button">modifier</button>
+          </div>
         </figure>
+
         <article>
+          <div class="top_change_2" style="display: none">
+            <i class="fa-regular fa-pen-to-square fa-lg"></i
+            ><button class="button_modifier" type="button">modifier</button>
+          </div>
           <h2>Designer d'espace</h2>
           <p>
             Je raconte votre histoire, je valorise vos idées. Je vous accompagne
@@ -52,8 +79,15 @@
           </p>
         </article>
       </section>
+
       <section id="portfolio">
-        <h2>Mes Projets</h2>
+        <div class="title">
+          <h2>Mes Projets</h2>
+          <div class="top_change_3" style="display: none">
+            <i class="fa-regular fa-pen-to-square fa-lg"></i
+            ><button class="button_modifier" type="button">modifier</button>
+          </div>
+        </div>
 
         <section class="filtres">
           <div class="quatre_filtres">
@@ -71,12 +105,11 @@
 
             <div class="e">
               <p>Hôtels & restaurants</p>
-            </div>
-          </div> -->
+            </div> -->
+          </div>
         </section>
 
         <div class="gallery">
-          
           <!-- <figure>
             <img
               src="	http://localhost:5678/images/la-balisiere1651287350102.png"
@@ -85,7 +118,6 @@
             />
             <figcaption>Appartement Paris V</figcaption>
           </figure> -->
-          
         </div>
       </section>
       <section id="contact">
