Accès à l'interface admin via date d'exp du token

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <div class="top_change_0" style="display: none">
+    <div class="top_change_0 top_change" style="display: none">
       <i class="fa-regular fa-pen-to-square fa-lg"></i>
       <button class="button_modified" type="button">Mode édition</button>
 
@@ -41,6 +41,7 @@
           <li>projets</li>
           <li>contact</li>
           <li><a href="./log.html">login</a></li>
+          <button id="logOut">Logout</button>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
@@ -50,14 +51,14 @@
         <figure>
           <img src="./assets/images/sophie-bluel.png" alt="" />
 
-          <div class="top_change_1" style="display: none">
+          <div class="top_change_1 top_change" style="display: none">
             <i class="fa-regular fa-pen-to-square fa-lg"></i>
             <button class="button_modifier" type="button">modifier</button>
           </div>
         </figure>
 
         <article>
-          <div class="top_change_2" style="display: none">
+          <div class="top_change_2 top_change" style="display: none">
             <i class="fa-regular fa-pen-to-square fa-lg"></i
             ><button class="button_modifier" type="button">modifier</button>
           </div>
