--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <div class="top_change_0 top_change" style="display: none">
+    <div class="top_change_0 top_change">
       <i class="fa-regular fa-pen-to-square fa-lg"></i>
       <button class="button_modified" type="button">Mode édition</button>
 
@@ -51,14 +51,14 @@
         <figure>
           <img src="./assets/images/sophie-bluel.png" alt="" />
 
-          <div class="top_change_1 top_change" style="display: none">
+          <div class="top_change">
             <i class="fa-regular fa-pen-to-square fa-lg"></i>
             <button class="button_modifier" type="button">modifier</button>
           </div>
         </figure>
 
         <article>
-          <div class="top_change_2 top_change" style="display: none">
+          <div class="top_change">
             <i class="fa-regular fa-pen-to-square fa-lg"></i
             ><button class="button_modifier" type="button">modifier</button>
           </div>
@@ -84,7 +84,7 @@
       <section id="portfolio">
         <div class="title">
           <h2>Mes Projets</h2>
-          <div class="top_change_3" style="display: none">
+          <div class="top_change">
             <i class="fa-regular fa-pen-to-square fa-lg"></i
             ><button class="button_modifier" type="button">modifier</button>
           </div>
