Syncro des fetch + refactor des filtres

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -41,7 +41,7 @@
           <li>projets</li>
           <li>contact</li>
           <li><a href="./log.html">login</a></li>
-          <button id="logOut">Logout</button>
+          <button id="logOut">logout</button>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
