Fix button logout login

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -40,8 +40,12 @@
         <ul class="liste">
           <li>projets</li>
           <li>contact</li>
-          <li><a href="./log.html">login</a></li>
-          <button id="logOut">logout</button>
+
+          <li id="logIn" style="visibility: visible">
+            <a href="./log.html">login</a>
+          </li>
+
+          <button id="logOut" style="visibility: collapse">logout</button>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
