--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -90,7 +90,18 @@
           <h2>Mes Projets</h2>
           <div class="top_change">
             <i class="fa-regular fa-pen-to-square fa-lg"></i
-            ><button class="button_modifier" type="button">modifier</button>
+            ><!--<button class="button_modifier" type="button">Modifier</button>-->
+
+            <button id="myBtn">Ouverture Modale</button>
+
+            <div id="myModal" class="modal">
+              <div class="modal-content">
+                <div class="modalHeader">
+                  <span class="close">&times;</span>
+                  <p>La gallerie photo</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
