--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -84,7 +84,9 @@
           </p>
         </article>
       </section>
+      <!-- ATTENTION A SUPPRIMER PAR LA SUITE -->
 
+      <!-- ATTENTION A SUPPRIMER PAR LA SUITE -->
       <section id="portfolio">
         <div class="title">
           <h2>Mes Projets</h2>
