--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -84,9 +84,7 @@
           </p>
         </article>
       </section>
-      <!-- ATTENTION A SUPPRIMER PAR LA SUITE -->
 
-      <!-- ATTENTION A SUPPRIMER PAR LA SUITE -->
       <section id="portfolio">
         <div class="title">
           <h2>Mes Projets</h2>
@@ -94,7 +92,7 @@
             <i class="fa-regular fa-pen-to-square fa-lg"></i
             ><!--<button class="button_modifier" type="button">Modifier</button>-->
 
-            <button id="myBtn">Ouverture Modale</button>
+            <button id="myBtn">modifier</button>
 
             <div id="myModal" class="modal">
               <div class="modal-content">
@@ -127,16 +125,7 @@
           </div>
         </section>
 
-        <div class="gallery">
-          <!-- <figure>
-            <img
-              src="	http://localhost:5678/images/la-balisiere1651287350102.png"
-              alt="Appartement Paris V"
-              crossorigin="anonymous"
-            />
-            <figcaption>Appartement Paris V</figcaption>
-          </figure> -->
-        </div>
+        <div class="gallery"></div>
       </section>
       <section id="contact">
         <h2>Contact</h2>
