Correctifs post soutenance

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -97,7 +97,7 @@
             <div id="myModal" class="modal">
               <div class="modal-content">
                 <div class="modalHeader">
-                  <span class="close">&times;</span>
+                  <span class="close le-premier">&times;</span>
                   <p>La gallerie photo</p>
                 </div>
               </div>
