fix design figma

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <div class="top_change_0 top_change">
+    <div id="top-barre" class="top_change_0 top_change">
       <i class="fa-regular fa-pen-to-square fa-lg"></i>
       <button class="button_modified" type="button">Mode édition</button>
 
